feat: loom and smithing (#1605)
* feat: loom and smithing

* feat: UnsafeChunk add populateSkyLight